tests/c_programs/conditional/valid/with_vars.c
int main(void) {
    int a = 10;
    int b = 20;
    // Conditional with variables
    return a > b ? a : b;
}