tests/c_programs/conditional/invalid_parse/missing_colon.c
int main(void) {
    // Missing colon - should fail parsing
    return 1 ? 42 0;
}